[tool.poetry]
name = "langchain-webscraping"
version = "0.1.0"
description = ""
authors = ["Oleg Yakovlev <oyakovinbox@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.41.1"
langchain = "^0.3.14"
selenium = "^4.27.1"
beautifulsoup4 = "^4.12.3"
langchain-ollama = "^0.2.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
